# mini-raytracer

./: CMakeLists.txt  vcpkg.json
src/: main.cpp  vec3.h
